--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
-  background-color: #010165;
+  /* background-color: #010165; */
+  background: linear-gradient(45deg, blue, red);
   margin: 0px;
 }
 
 .header {
   background-color: #00ffff;
   text-align: center;
+  opacity: 0.7;
 }
 
 .title-row {
@@ -61,4 +63,5 @@ body {
   color: #010165;
   margin-bottom: 21px;
   cursor: pointer;
+  border-radius: 10%;
 }
